--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -7,7 +7,7 @@
 <body>
 	<header>
 		<h1><a href="/items">サンプルショッピング</a></h1>
-		<p>[[${@account.name}]]さんがログイン中 <a href="">ログアウト</a></p>
+		<p>[[${@account.name}]]さんがログイン中 <a href="/logout">ログアウト</a></p>
 	</header>
 	<footer>
 		<div class="copyright">&copy;ABCショップ</div>
