ver.0.03: スタイルシートの追加

--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -3,12 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>商品一覧</title>
+<link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
 	<header>
 		<h1><a href="/items">サンプルショッピング</a></h1>
 		<p>[[${@account.name}]]さんがログイン中 <a href="/logout">ログアウト</a></p>
 	</header>
+	<hr />
 	<footer>
 		<div class="copyright">&copy;ABCショップ</div>
 	</footer>
