--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -9,6 +9,13 @@
 	<!-- ヘッダ領域の表示 -->
 	<th:block th:replace="~{parts/header}"></th:block>
 	<hr />
+	<nav>
+		<a href="/items">全商品</a>
+		<a th:each="category:${categoryList}"
+		   th:href="'/items?categoryId=' + ${category.id}"
+		   th:text="${category.name}" />
+		<a href="/cart">カートを見る</a>
+	</nav>
 	<table th:if="${itemList}">
 		<tr>
 			<th>NO</th>
