--- a/src/main/resources/templates/cartItem.html
+++ b/src/main/resources/templates/cartItem.html
@@ -8,4 +8,17 @@
 		<th>小計</th>
 		<th></th>
 	</tr>
+	<tr th:each="item:${@cart.itemList}">
+		<td>[[${item.id}]]</td>
+		<td>[[${item.name}]]</td>
+		<td>[[${item.price}]]</td>
+		<td>[[${item.quantity}]]</td>
+		<td>[[${item.price * item.quantity}]]</td>
+		<td>
+			<form action="" method="post">
+				<input type="hidden" name="itemId" th:value="${item.id}" />
+				<button>削除</button>
+			</form>
+		</td>
+	</tr>
 </table>
