ver.0.31: 顧客情報入力画面表示

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -10,6 +10,9 @@
 	<th:block th:replace="~{parts/header}"></th:block>
 	<hr />
 	<th:block th:replace="cartItem"></th:block>
+	<form action="/order" method="get">
+		<button>注文する</button>
+	</form>
 	<hr />
 	<!-- フッタ領域の表示 -->
 	<th:block th:replace="~{parts/footer}"></th:block>
