--- a/src/main/resources/templates/orderConfirm.html
+++ b/src/main/resources/templates/orderConfirm.html
@@ -9,30 +9,35 @@
 	<!-- ヘッダ領域の表示 -->
 	<th:block th:replace="~{parts/header}"></th:block>
 	<hr />
+	<h2>下記の内容で注文を行いますか？</h2>
 	<h2>ご注文商品</h2>
 	<th:block th:replace="cartItem"></th:block>
 	<hr />
-	<h2>お客様情報を入力してください</h2>
-	<form action="/order/confirm" method="post">
+	<h2>お客様情報</h2>
 	<table>
 		<tr>
 			<th>お名前</th>
-			<td><input type="text" name="name" /></td>
+			<td>[[${customer.name}]]</td>
 		</tr>
 		<tr>
 			<th>住所</th>
-			<td><input type="text" name="address" /></td>
+			<td>[[${customer.address}]]</td>
 		</tr>
 		<tr>
 			<th>電話番号</th>
-			<td><input type="text" name="tel" /></td>
+			<td>[[${customer.tel}]]</td>
 		</tr>
 		<tr>
 			<th>email</th>
-			<td><input type="text" name="email" /></td>
+			<td>[[${customer.email}]]</td>
 		</tr>
 	</table>
-	<button>確認画面へ</button>
+	<form action="/order" method="post">
+		<input type="hidden" name="name" th:value="${customer.name}" />
+		<input type="hidden" name="name" th:value="${customer.address}" />
+		<input type="hidden" name="name" th:value="${customer.tel}" />
+		<input type="hidden" name="name" th:value="${customer.email}" />
+		<button>この内容で注文</button>
 	</form>
 	<hr />
 	<!-- フッタ領域の表示 -->
