--- a/src/main/resources/templates/orderConfirm.html
+++ b/src/main/resources/templates/orderConfirm.html
@@ -34,9 +34,9 @@
 	</table>
 	<form action="/order" method="post">
 		<input type="hidden" name="name" th:value="${customer.name}" />
-		<input type="hidden" name="name" th:value="${customer.address}" />
-		<input type="hidden" name="name" th:value="${customer.tel}" />
-		<input type="hidden" name="name" th:value="${customer.email}" />
+		<input type="hidden" name="address" th:value="${customer.address}" />
+		<input type="hidden" name="tel" th:value="${customer.tel}" />
+		<input type="hidden" name="email" th:value="${customer.email}" />
 		<button>この内容で注文</button>
 	</form>
 	<hr />
